--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=M, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="home.css" />
     <title>Quiz for thought</title>
   </head>
   <body>
-    <div id="quiz"></div>
-    <button id="submit">See Result</button>
-    <div id="results"></div>
-    <script src="app.js"></script>
+    <h1>Welcome to my blended Project</h1>
+    <p>
+      From this page you will be able to access my quiz and my todo list app.
+    </p>
+    <p>Thank you for taking the time to viewing my project.</p>
+    <form action="quiz.html">
+      <button id="list">Quiz App</button>
+    </form>
+    <form action="todo.html">
+      <button id="todo">TodoList App</button>
+    </form>
   </body>
 </html>
